Updated threat list styling.  Added metadata to source code objects.  Added source code editor dialog.
